--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.3.0",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "html-react-parser": "^0.10.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "nodemon": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "server": "nodemon index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
